Версия с учетом комментариев после первого ревью

--- a/styles/style.css
+++ b/styles/style.css
@@ -210,7 +210,7 @@ ol {
   font-family: "Fira Sans Condensed", Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 400px;
   line-height: normal;
   border-top: 1px solid #FFF;
   border-bottom: 1px solid #FFF;
